# code_router_exp

./: .gitignore  AGENTS.md  CLAIMS_AND_EVALUATION.md  CODEX_GOAL.md  DATA_AND_COST_PLAN.md  EXPERIMENTS.md  LOCAL_MODELS_AND_SERVING.md  METHOD_SPEC.md  PAPERS_AND_BASELINES.md  PHASE3_AGENT_HANDOFF.md  PROJECT.md  README.md  REFERENCES.md  Research Flow.md  STARTING_PROMPT.md  START_HERE_FOR_CODEX.md  paper_notes.md  pyproject.toml
configs/: benchmark_sampling.yaml  llmrouterbench.yaml  llmrouterbench_32model.yaml  llmrouterbench_broad10.yaml  llmrouterbench_broad20.yaml  llmrouterbench_pilot.yaml  llmrouterbench_scale20.yaml  model_prices.yaml  model_servers.yaml  phase2_exact_manifest_probe_all200_qwen3_4b_transformers.yaml  phase2_exact_manifest_probe_dryrun.yaml  phase2_exact_manifest_probe_qwen3_4b_transformers.yaml  phase2_exact_manifest_probe_vllm_qwen3_4b_all200.yaml  phase2_exact_manifest_probe_vllm_qwen3_4b_smoke.yaml  phase2_exact_task_manifest.yaml  phase2_exact_task_manifest_all200.yaml  phase2_local_all200_qwen3_4b_transformers.yaml  phase2_local_exact_manifest_dryrun.yaml  phase2_local_exact_manifest_qwen3_4b_transformers.yaml  phase2_local_qwen3_4b_transformers_smoke.yaml  phase2_local_server_readiness.yaml  phase2_local_server_readiness_vllm_qwen3_4b.yaml  phase2_local_smoke.yaml  phase2_local_vllm_qwen3_4b_all200_nothink.yaml  phase2_local_vllm_qwen3_4b_exact_smoke.yaml  phase2_local_vllm_qwen3_4b_exact_smoke_nothink.yaml  phase2_local_vllm_two_model_all200_nothink.yaml  probecode_final_eval.yaml  proberoute_controlled.yaml  synthetic.yaml  (+1 more)
(+1083 files in other folders)
